--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "br.edu.ifsul.primeiraapp"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -20,14 +20,23 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //compatibilidade com versões anteriores do android
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.google.firebase:firebase-database:11.6.0'
-    implementation 'com.google.firebase:firebase-auth:11.6.0'
+    //realtime do firebase
+    implementation 'com.google.firebase:firebase-database:16.0.1'
+    //autenticação do firebase
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
+    //barcode
+    implementation'com.google.android.gms:play-services-vision:15.0.2'
+    //design
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:cardview-v7:26.1.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
